# gtsam_demo_limot

./: CMakeLists.txt  README.md  curve_fit.cpp  ternaryfactors_test.cpp
include/: curve_fit.h  factorgraph_opt.h
